--- a/restaurateur/templates/manager_orders.html
+++ b/restaurateur/templates/manager_orders.html
@@ -1,3 +1,5 @@
+# manager_orders.html
+
 {% extends 'base_restaurateur_page.html' %}
 
 {% block title %}Необработанные заказы | Star Burger{% endblock %}
@@ -19,6 +21,7 @@
       <th>Адрес доставки</th>
       <th>Стоимость</th>
       <th>Состав заказа</th>
+      <th>Ссылка на админку</th>
     </tr>
     {% for order in orders %}
     <tr>
@@ -35,10 +38,13 @@
           {% endfor %}
         </ul>
       </td>
+      <td>
+        <a href="{% url 'admin:foodcartapp_order_change' order.id %}">Редактировать</a>
+      </td>
     </tr>
     {% empty %}
     <tr>
-      <td colspan="7">Нет необработанных заказов</td>
+      <td colspan="8">Нет необработанных заказов</td>
     </tr>
     {% endfor %}
   </table>
