--- a/restaurateur/templates/manager_orders.html
+++ b/restaurateur/templates/manager_orders.html
@@ -39,7 +39,9 @@
         </ul>
       </td>
       <td>
-        <a href="{% url 'admin:foodcartapp_order_change' order.id %}">Редактировать</a>
+        <a href="{% url 'admin:foodcartapp_order_change' order.id %}?next={{ request.get_full_path|urlencode }}">
+          ✎ Редактировать
+        </a>
       </td>
     </tr>
     {% empty %}
